CloudFormation/EC2/ec2-resuse.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "",
    "Metadata": {},
    "Parameters": {
        "NetworkStackName": {
            "Description": "Name of an active CloudFormation stack that contains the networking resources, such as the subnet and security group, that will be used in this stack.",
            "Default": "full-vpc-reuse",
            "Type": "String"
        }
    },
    "Mappings": {},
    "Conditions": {},
    "Resources": {
        "EC2WithSecurityInstance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": "ami-01d025118d8e760db",
                "InstanceType": "t2.nano",
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sdm",
                        "Ebs": {
                            "VolumeType": "gp2",
                            "DeleteOnTermination": true,
                            "VolumeSize": 20
                        }
                    }
                ],
                "SecurityGroupIds": [
                    {
                        "Fn::GetAtt": [
                            "InstanceSecurityGroup",
                            "GroupId"
                        ]
                    }
                ],
                "SubnetId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkStackName}-FirstPublicSubnet"
                    }
                }
            }
        },
        "InstanceSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Fn::ImportValue": {
                        "Fn::Sub": "${NetworkStackName}-VPCID"
                    }
                },
                "GroupDescription": "allow 80 and 22",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": 22,
                        "ToPort": 22,
                        "IpProtocol": "tcp"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": 80,
                        "ToPort": 80,
                        "IpProtocol": "tcp"
                    }
                ]
            }
        }
    },
    "Outputs": {}
}
